# USDSandbox

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  runtime.sh
.github/workflows/: build.yml
cmake/: Config.cmake.in  Defaults.cmake  Export.cmake  Options.cmake  Packages.cmake  Tools.cmake
cmake/tools/: BaseTools.cmake  CXXTools.cmake  DocTools.cmake  USDPluginTools.cmake
docs/: CMakeLists.txt
docs/doxygen/: CMakeLists.txt  Doxyfile.in
docs/sphinx/: CMakeLists.txt  api.rst  conf.py.in  index.rst  tetrahedron.rst  usdPlatonic.rst
src/: CMakeLists.txt  Doxyfile.in
src/exampleExecutable/: CMakeLists.txt  main.cpp
src/exampleSharedLibrary/: CMakeLists.txt  add.cpp  add.h  api.h
src/exampleSharedLibrary/tests/: CMakeLists.txt  testAdd.cpp
src/pythonSnippets/: usdGeomXformOps.py  usdSkelAuthorBlendshapes.py  usdSkelAuthorSkinning.py
src/usdAuthoring/: CMakeLists.txt
src/usdPlatonic/: CMakeLists.txt  __init__.py  api.h  generatedSchema.usda  module.cpp  moduleDeps.cpp  plugInfo.json  regularConvexPolyhedron.cpp  regularConvexPolyhedron.h  schema.usda  tetrahedron.cpp  tetrahedron.h  tokens.cpp  tokens.h  wrapRegularConvexPolyhedron.cpp  wrapTetrahedron.cpp  wrapTokens.cpp
src/usdSkelAuthoring/: testUsdSkelAuthorBlendshapes.py
src/usdSnippets/: CMakeLists.txt  authorBlendShapes.py  authorCollection.py  authorImplicitInstancing.py  authorInternalReferences.py  authorMakeVisible.py  authorMaterialDirectBinding.py  authorMaterialNodeGraphAndShader.py  authorModelAssetInfo.py  authorModelHierarchy.py  authorPayloads.py  authorPointInstancer.py  authorReferences.py  authorSimpleCollection.py  authorSkinning.py  authorSpinningCubes.py  authorSubLayers.py  authorVariants.py  authorXformedSphere.py  plugModuleExamples.py  referencesVsPayloads.py  testAnimMapper.py  testExternalReferences.py  testMakeVisible.py  testUsdSchemaRegistry.py  usdAuthorCollections.py  usdAuthorImplicitInstances.py  usdAuthorPointInstancer.py  usdAuthorSpinningCube.py  usdAuthorSpinningCubes.py  usdGeomXformOps.py  usdMakeVisibility.py  usdSkelAnimMapper.py  usdSkelAuthorBlendshapes.py  usdSkelAuthorSkinning.py
